Created base Soccer page and added elements
created soccer page and added name, buttons and score labels etc...

--- a/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker.csproj
+++ b/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker.csproj
@@ -30,4 +30,10 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Soccer.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
