Added save button and partially added save to file

--- a/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker.csproj
+++ b/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
 
