--- a/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker.csproj
+++ b/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker/Sports_Score_Tracker.csproj
@@ -16,6 +16,7 @@
     <None Remove="Assets\Images\rugby.jpg" />
     <None Remove="Assets\Images\soccer.jpg" />
     <None Remove="Assets\Images\tennisball.png" />
+    <None Remove="AudioFiles\fulltime.mp3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,10 +26,12 @@
     <EmbeddedResource Include="Assets\Images\rugby.jpg" />
     <EmbeddedResource Include="Assets\Images\soccer.jpg" />
     <EmbeddedResource Include="Assets\Images\tennisball.png" />
+    <EmbeddedResource Include="AudioFiles\fulltime.mp3" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Xam.Plugin.SimpleAudioPlayer" Version="1.3.0" />
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
 
