--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker.UWP/ScoreTracker.UWP.csproj
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker.UWP/ScoreTracker.UWP.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{B7690D94-FF6E-44D1-8AFC-E2FB3722E691}</ProjectGuid>
+    <ProjectGuid>{2F91075B-93F1-4883-A3F3-4F28B6BA3CE4}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sports_Score_Tracker.UWP</RootNamespace>
-    <AssemblyName>Sports_Score_Tracker.UWP</AssemblyName>
+    <RootNamespace>ScoreTracker.UWP</RootNamespace>
+    <AssemblyName>ScoreTracker.UWP</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.17763.0</TargetPlatformVersion>
@@ -17,7 +17,7 @@
     <EnableDotNetNativeCompatibleProfile>true</EnableDotNetNativeCompatibleProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <PackageCertificateKeyFile>Sports_Score_Tracker.UWP_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>ScoreTracker.UWP_TemporaryKey.pfx</PackageCertificateKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
@@ -147,9 +147,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.5"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Sports_Score_Tracker\Sports_Score_Tracker.csproj">
-      <Project>{ECB6014F-2E30-4295-BA84-7B3B76B0E684}</Project>
-      <Name>Sports_Score_Tracker</Name>
+    <ProjectReference Include="..\ScoreTracker\ScoreTracker.csproj">
+      <Project>{F01E6F9D-7350-428D-9352-E6A01A1F24B2}</Project>
+      <Name>ScoreTracker</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
