--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker.Android/ScoreTracker.Android.csproj
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker.Android/ScoreTracker.Android.csproj
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
+	<IntermediateOutputPath>C:\Projects\MyApp</IntermediateOutputPath>
+  </PropertyGroup>
+  <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{781F0EC8-2D6F-441E-AA5F-3FCAF1E45DBC}</ProjectGuid>
