Implemented tennis score system, implemented alerts for going over score, also added navigation to tennis page from mainpage

--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/ScoreTracker.csproj
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/ScoreTracker.csproj
@@ -52,5 +52,8 @@
     <EmbeddedResource Update="Soccer.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Tennis.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
