Added rugby page with features needed and added navigation to rugby page

--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/ScoreTracker.csproj
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/ScoreTracker.csproj
@@ -54,6 +54,9 @@
     <EmbeddedResource Update="LoadGames.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Rugby.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Soccer.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
