--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/ScoreTracker.csproj
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/ScoreTracker.csproj
@@ -12,10 +12,14 @@
   <ItemGroup>
     <None Remove="Assets\Images\basketball.jpg" />
     <None Remove="Assets\Images\gaa.jpg" />
+    <None Remove="Assets\Images\grass.jpg" />
     <None Remove="Assets\Images\icehockey.PNG" />
     <None Remove="Assets\Images\rugby.jpg" />
     <None Remove="Assets\Images\soccer.jpg" />
+    <None Remove="Assets\Images\soccerpitch.jpg" />
+    <None Remove="Assets\Images\socceruwp.jpg" />
     <None Remove="Assets\Images\tennisball.png" />
+    <None Remove="Assets\Images\uwpback.jpg" />
     <None Remove="AudioFiles\BasketballBuzzer.mp3" />
     <None Remove="AudioFiles\fulltime.mp3" />
     <None Remove="AudioFiles\HockeyHorn.mp3" />
@@ -26,10 +30,14 @@
   <ItemGroup>
     <EmbeddedResource Include="Assets\Images\basketball.jpg" />
     <EmbeddedResource Include="Assets\Images\gaa.jpg" />
+    <EmbeddedResource Include="Assets\Images\grass.jpg" />
     <EmbeddedResource Include="Assets\Images\icehockey.PNG" />
     <EmbeddedResource Include="Assets\Images\rugby.jpg" />
     <EmbeddedResource Include="Assets\Images\soccer.jpg" />
+    <EmbeddedResource Include="Assets\Images\soccerpitch.jpg" />
+    <EmbeddedResource Include="Assets\Images\socceruwp.jpg" />
     <EmbeddedResource Include="Assets\Images\tennisball.png" />
+    <EmbeddedResource Include="Assets\Images\uwpback.jpg" />
     <EmbeddedResource Include="AudioFiles\BasketballBuzzer.mp3" />
     <EmbeddedResource Include="AudioFiles\fulltime.mp3" />
     <EmbeddedResource Include="AudioFiles\HockeyHorn.mp3" />
