--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/ScoreTracker.csproj
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/ScoreTracker.csproj
@@ -20,7 +20,9 @@
     <None Remove="Assets\Images\soccer.jpg" />
     <None Remove="Assets\Images\soccerpitch.jpg" />
     <None Remove="Assets\Images\socceruwp.jpg" />
+    <None Remove="Assets\Images\tennisandroid.jpg" />
     <None Remove="Assets\Images\tennisball.png" />
+    <None Remove="Assets\Images\tennisuwp.jpg" />
     <None Remove="Assets\Images\uwpback.jpg" />
     <None Remove="AudioFiles\BasketballBuzzer.mp3" />
     <None Remove="AudioFiles\fulltime.mp3" />
@@ -40,7 +42,9 @@
     <EmbeddedResource Include="Assets\Images\soccer.jpg" />
     <EmbeddedResource Include="Assets\Images\soccerpitch.jpg" />
     <EmbeddedResource Include="Assets\Images\socceruwp.jpg" />
+    <EmbeddedResource Include="Assets\Images\tennisandroid.jpg" />
     <EmbeddedResource Include="Assets\Images\tennisball.png" />
+    <EmbeddedResource Include="Assets\Images\tennisuwp.jpg" />
     <EmbeddedResource Include="Assets\Images\uwpback.jpg" />
     <EmbeddedResource Include="AudioFiles\BasketballBuzzer.mp3" />
     <EmbeddedResource Include="AudioFiles\fulltime.mp3" />
