Added backgrounds for hockey page for both platforms

--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/ScoreTracker.csproj
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/ScoreTracker.csproj
@@ -16,6 +16,8 @@
     <None Remove="Assets\Images\gaa.jpg" />
     <None Remove="Assets\Images\grass.jpg" />
     <None Remove="Assets\Images\icehockey.PNG" />
+    <None Remove="Assets\Images\icehockeyandroid.jpg" />
+    <None Remove="Assets\Images\icehockeyuwp.jpg" />
     <None Remove="Assets\Images\rugby.jpg" />
     <None Remove="Assets\Images\soccer.jpg" />
     <None Remove="Assets\Images\soccerpitch.jpg" />
@@ -38,6 +40,8 @@
     <EmbeddedResource Include="Assets\Images\gaa.jpg" />
     <EmbeddedResource Include="Assets\Images\grass.jpg" />
     <EmbeddedResource Include="Assets\Images\icehockey.PNG" />
+    <EmbeddedResource Include="Assets\Images\icehockeyandroid.jpg" />
+    <EmbeddedResource Include="Assets\Images\icehockeyuwp.jpg" />
     <EmbeddedResource Include="Assets\Images\rugby.jpg" />
     <EmbeddedResource Include="Assets\Images\soccer.jpg" />
     <EmbeddedResource Include="Assets\Images\soccerpitch.jpg" />
