--- a/Sports_Score_Tracker/ScoreTracker/ScoreTracker/ScoreTracker.csproj
+++ b/Sports_Score_Tracker/ScoreTracker/ScoreTracker/ScoreTracker.csproj
@@ -21,6 +21,7 @@
     <None Remove="Assets\Images\icehockeyuwp.jpg" />
     <None Remove="Assets\Images\loadgamesandroid.png" />
     <None Remove="Assets\Images\loadgamesuwp.jpeg" />
+    <None Remove="Assets\Images\mutedark.png" />
     <None Remove="Assets\Images\rugby.jpg" />
     <None Remove="Assets\Images\rugbyandroid.jpg" />
     <None Remove="Assets\Images\Rugbyuwp.jpg" />
@@ -28,6 +29,7 @@
     <None Remove="Assets\Images\soccer.jpg" />
     <None Remove="Assets\Images\soccerpitch.jpg" />
     <None Remove="Assets\Images\socceruwp.jpg" />
+    <None Remove="Assets\Images\soundondark.png" />
     <None Remove="Assets\Images\tennisandroid.jpg" />
     <None Remove="Assets\Images\tennisball.png" />
     <None Remove="Assets\Images\tennisuwp.jpg" />
@@ -51,6 +53,7 @@
     <EmbeddedResource Include="Assets\Images\icehockeyuwp.jpg" />
     <EmbeddedResource Include="Assets\Images\loadgamesandroid.png" />
     <EmbeddedResource Include="Assets\Images\loadgamesuwp.jpeg" />
+    <EmbeddedResource Include="Assets\Images\mutedark.png" />
     <EmbeddedResource Include="Assets\Images\rugby.jpg" />
     <EmbeddedResource Include="Assets\Images\rugbyandroid.jpg" />
     <EmbeddedResource Include="Assets\Images\Rugbyuwp.jpg" />
@@ -58,6 +61,7 @@
     <EmbeddedResource Include="Assets\Images\soccer.jpg" />
     <EmbeddedResource Include="Assets\Images\soccerpitch.jpg" />
     <EmbeddedResource Include="Assets\Images\socceruwp.jpg" />
+    <EmbeddedResource Include="Assets\Images\soundondark.png" />
     <EmbeddedResource Include="Assets\Images\tennisandroid.jpg" />
     <EmbeddedResource Include="Assets\Images\tennisball.png" />
     <EmbeddedResource Include="Assets\Images\tennisuwp.jpg" />
